# ExcelConsolidator

./: README.md  absenteeism_generator.py  consolidador.py  main.py  pyproject.toml  requirements.txt
